# zephyr_stm32f4_minimal

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  prj.conf  west.yml
boards/arm/com_f411ce/: Kconfig.board  Kconfig.defconfig  com_f411ce.dts
src/MAIN/: main.c  main.h
